# daily_work

./: .gitignore  AGENTS.md  README.md  conftest.py  environment.production.yml
algo_main/: .gitignore  README.md  environment.yml  pyproject.toml
algo_main/artifacts/: README.md
algo_main/configs/: analyzer_registry.yaml  data_source.yaml  feature_registry.yaml  regex_column_rules.yaml  schema_mapping.yaml  task_registry.yaml  validation.yaml
algo_main/data/: process.ipynb
algo_main/docs/: alive_prediction_current_entrypoints.md
algo_main/notebooks/: 01_BS_Agent_DingDan_EDA_and_Cleaning.ipynb  02_alive_prediction_model_selection_story.ipynb  03_alive_prediction_candidate_refinement_story.ipynb
algo_main/reports/: alive_prediction_cache_migration_report.md
algo_main/scripts/: 01_extract_raw.py  02_convert_raw_to_parquet.py  03_clean_orders.py  04_build_facts.py  05_build_features.py  06_train_task.py  07_run_backtest.py  08_export_model_bundle.py  09_score_latest.py  audit_alive_prediction_detector_completion_design_v1.py  audit_alive_prediction_m1_m2_v1.py  audit_alive_prediction_repo_cleanup.py  audit_alive_prediction_stage_end_v1.py  build_alive_prediction_row_level_backtest_frame_v1.py  clean_alive_prediction_cache.py  design_alive_prediction_l2_l3_v1.py  export_best_model_artifact_to_algorithm_core.py  export_current_raw_input_sample_for_algorithm_core.py  export_current_v2_raw_input_batch_for_algorithm_core.py  fix_alive_prediction_m1_m2_v1.py  generate_project_result_batches_2025_q4.py  rebuild_cleaning_notebook.py  (+44 more)
project/: .env.example  CODEX_NOTES.md  pyproject.toml
(+1214 files in other folders)
