[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alg"
version = "0.1.0"
description = "Algorithm research scaffold for order risk analysis."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alg*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
