[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-guard-algo-backend"
version = "0.1.0"
description = "Algorithm backend for terminal dynamic recognition and terminal churn-risk inspection."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.2",
  "pandas>=2.2.2",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "ruff>=0.5.0",
]
mysql = [
  "PyMySQL>=1.1.1",
]
mssql = [
  "pyodbc>=5.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
